--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     build:
       context: .
       args:
-        USE_MIRROR: "true"  
+        USE_MIRROR: "true"
+        # PLATFORM: linux/amd64
       dockerfile: ./dockerfile
     environment:
       NODE_ENV: production
@@ -27,8 +28,8 @@ services:
       - 1111:1111
     healthcheck:
       test: ["CMD", "curl", "-f", "http://blinko-website:1111/"]
-      interval: 30s 
-      timeout: 10s  
+      interval: 30s
+      timeout: 10s
       retries: 5
       start_period: 30s
     networks:
