--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@langchain/textsplitters": "^0.1.0",
     "@libsql/client": "^0.14.0",
     "@libsql/linux-arm64-gnu": "0.5.0-pre.6",
+    "@libsql/linux-x64-gnu": "0.5.0-pre.6",
     "@mastra/client-js": "^0.1.1",
     "@mastra/core": "^0.3.0",
     "@mastra/rag": "^0.1.3",
